--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -34,3 +34,52 @@ body {
 .align-center{
   align-items: center;
 }
+
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-10 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.flex-wrap{
+  flex-wrap: wrap;
+}
+
+.black-button{
+  padding: 1rem;
+  background: black;
+  color: white;
+  -webkit-box-shadow: -1px 6px 8px -2px rgba(0,0,0,0.61); 
+  box-shadow: -1px 6px 8px -2px rgba(0,0,0,0.61);
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+.black-button:hover{
+  background: rgba(0, 0, 0, 0.834);
+  color: white;
+}
+
+.mb-1{
+  margin-bottom: 1rem;
+}
+
+.mt-1{
+  margin-top: 1rem;
+}
+
+.mt-3{
+  margin-top: 3rem;
+}
