--- a/Views/Notes/Index.cshtml
+++ b/Views/Notes/Index.cshtml
@@ -1,38 +1,67 @@
 @model IEnumerable<blog.Models.Note>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Mis Notas";
 }
 
-<h1>Index</h1>
+<div class="mb-1 flex-row align-center space-x-10">
+    <h1 class="mb-1">Mis Notas</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+    <a class="black-button mt-1" asp-action="Create">Nueva Nota</a>
+</div>
 
-<div>
+<div class="form-group mt-3">
+<input class="form-control" placeholder="Filtrar por título"/>
+<input class="form-control mt-1" placeholder="Filtrar por cuerpo"/>
+</div>
+
+<div class="flex-row space-x-3 flex-wrap mt-1">
 @foreach (var item in Model) {
+    <a class="link-detail" asp-action="Details" asp-route-id="@item.Id"}>
         <div class="note-card">
             <div class="flex-row">
             <h2>
-                @Html.DisplayFor(modelItem => item.Title)
+                @item.Title
             </h2>
             <div class="card-options">
-                <a asp-action="Edit" asp-route-id="@item.Id">
-                    <img class="icon" src="/icons/edit.svg"/>
-                </a>
-                @{/*<a asp-action="Details" asp-route-id="@item.Id">Details</a>*/}
-                <a asp-action="Delete" asp-route-id="@item.Id">
-                    <img class="icon" src="/icons/delete.svg"/>
-                </a>
+                    <img class="icon edit-icon" src="/icons/edit.svg" name="@item.Id"/>
+                
+                    <img class="icon delete-icon" src="/icons/delete.svg" name="@item.Id"/>
             </div>
             </div>
             <p class="date-text">@Html.DisplayNameFor(model => model.CreationDate): <span class="date">@Html.DisplayFor(modelItem => item.CreationDate)</span></p>
         </div>
+        </a>
 }
 </div>
 
+<script>
+    function click_edit(e, noteId){
+        e.preventDefault()
+        window.location.href = "notes/edit/" + noteId 
+    }
+
+    function click_delete(e, noteId){
+        e.preventDefault()
+        window.location.href = "notes/delete/" + noteId 
+    }
+
+    let edit_icons = document.getElementsByClassName("edit-icon")
+    for(let i = 0; i < edit_icons.length; i++)
+        edit_icons[i].addEventListener('click', (e)=>click_edit(e, edit_icons[i].name))
+    
+    let delete_icons = document.getElementsByClassName("delete-icon")
+    for(let i = 0; i < delete_icons.length; i++)
+        delete_icons[i].addEventListener('click', (e)=>click_delete(e, delete_icons[i].name))
+    
+</script>
+
 <style>
+    .link-detail{
+        text-decoration:none;
+        color:black;
+        margin-top:1rem;
+    }
     .note-card{
         position:relative;
         padding:3rem;
@@ -40,12 +69,17 @@
         border-radius:10px;
         border:1px solid gray;
         cursor:pointer;
+        margin-bottom:0.75rem;
+        -webkit-box-shadow: -1px 6px 8px -2px rgba(0,0,0,0.61); 
+        box-shadow: -1px 6px 8px -2px rgba(0,0,0,0.61);
     }
 
     .note-card:hover{
         background:black;
         background: rgba(0, 0, 0, 0.05);
         color:blue;
+        scale:1.01;
+        border: 1px solid blue;
     }
 
 
@@ -55,19 +89,25 @@
         right:0.5rem;
     }
 
-    .card-options>a{
-        text-decoration:none;
-        padding:0.2rem;
-    }
-
-    .card-options>a:hover>.icon{
-        scale:1.3;
-    }
-
     .icon{
-        width: 2rem;
-        height:1.5rem;
+        width: 2.5rem;
+        height:2rem;
         animation-duration: 1000ms;
+        padding:0.2rem;
+        z-index:10;
+        border-radius:10px;
+    }
+
+    .icon:hover{
+        scale:1.2;
+    }
+
+    .edit-icon:hover{
+        background:rgba(0, 128, 0, 0.215);
+    }
+
+    .delete-icon:hover{
+        background:rgba(255, 0, 0, 0.215);
     }
 
     .date-text{
