--- a/Views/Notes/Index.cshtml
+++ b/Views/Notes/Index.cshtml
@@ -15,15 +15,15 @@
 <input class="form-control mt-1" placeholder="Filtrar por cuerpo" id="body_filter"/>
 </div>
 
-<div class="flex-row space-x-3 flex-wrap mt-1" id="container-cards">
+<div class="flex-row flex-wrap mt-1" id="container-cards">
 @foreach (var item in Model) {
     <a class="link-detail" asp-action="Details" asp-route-id="@item.Id"}>
         <div class="note-card">
             <div class="flex-row">
-            <h2 class="title-note">
+            <h4 class="title-note">
                 @item.Title
-            </h2>
-            <p class="body-note" style="">@item.Body</p>
+            </h4>
+            <p class="body-note" style="display:none;">@item.Body</p>
             <div class="card-options">
                     <img class="icon edit-icon" src="/icons/edit.svg" name="@item.Id"/>
                 
@@ -73,6 +73,7 @@
         border:1px solid gray;
         cursor:pointer;
         margin-bottom:0.75rem;
+        margin-right:0.75rem;
         -webkit-box-shadow: -1px 6px 8px -2px rgba(0,0,0,0.61); 
         box-shadow: -1px 6px 8px -2px rgba(0,0,0,0.61);
     }
