--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -80,6 +80,14 @@ body {
   margin-top: 1rem;
 }
 
+.m-0{
+  margin: 0;
+}
+
 .mt-3{
   margin-top: 3rem;
+}
+
+.without-dec{
+  text-decoration: none;
 }
