--- a/Views/Notes/Index.cshtml
+++ b/Views/Notes/Index.cshtml
@@ -4,10 +4,33 @@
     ViewData["Title"] = "Mis Notas";
 }
 
+@{
+    var order = ViewBag.order == null ? 1 : -1*ViewBag.order;
+    var sortedBy = ViewBag.sortedBy;
+    var arrow_icon = order == -1 ? "/icons/up_arrow.svg" : "/icons/down_arrow.svg";
+}
+
+<div class="flex-row space-between align-center">
 <div class="mb-1 flex-row align-center space-x-10">
     <h1 class="mb-1">Mis Notas</h1>
 
     <a class="black-button mt-1" asp-action="Create">Nueva Nota</a>
+</div>
+<div class="flex-row space-x-3">
+    <a class="without-dec" asp-action="Index" asp-route-sortedBy="title" asp-route-order="@order">
+        <div class="@(sortedBy == "title" ? "order order-selected":"order") flex-row align-center">
+            <p class="m-0">Ordenar por título</p>
+            <img class="arrow" src="@arrow_icon" />
+        </div>
+    </a>
+    <a class="without-dec" asp-action="Index" asp-route-sortedBy="date" asp-route-order="@order">
+        <div class="@(sortedBy == "date" ? "order order-selected":"order") flex-row align-center">
+            <p class="m-0" style=>Ordenar por fecha</p>
+            <img class="arrow" src="@arrow_icon" />
+            
+        </div>
+        </a>
+</div>
 </div>
 
 <div class="form-group mt-3">
@@ -60,6 +83,32 @@
 <script src="~/js/filter.js" asp-append-version="true"></script>
 
 <style>
+    .order{
+        padding: 1rem;
+        text-decoration:none;
+        border:1px solid black;
+        border-radius:10px;
+        color:black;
+    }
+
+    .order:hover{
+        background: rgba(0, 0, 0, 0.05);
+        color:blue;
+        scale:1.01;
+        border: 1px solid blue;
+    }
+
+    .order-selected{
+        color:blue;
+        border: 1px solid blue;
+    }
+
+    .arrow{
+        height:1rem;
+        width:0.5rem;
+        margin-left:0.5rem
+    }
+
     .link-detail{
         text-decoration:none;
         color:black;
