--- a/Views/Notes/Create.cshtml
+++ b/Views/Notes/Create.cshtml
@@ -1,37 +1,33 @@
 @model blog.Models.Note
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Nueva Nota";
 }
-
-<h1>Create</h1>
-
-<h4>Note</h4>
+<div class="flex-row space-x-3 align-center">
+    <a asp-action="Index">Volver</a>
+<h1>Crear nueva nota</h1>
+</div>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+    <div class="flex-col h-full space-y-3">
+        <form asp-action="Create" class="space-y-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group flex-col">
                 <label asp-for="Body" class="control-label"></label>
-                <input asp-for="Body" class="form-control" />
+                <textarea class="h-big form-control" asp-for="Body"></textarea>
                 <span asp-validation-for="Body" class="text-danger"></span>
             </div>
             <input asp-for="UserId" value="@ViewBag.UserId" type="hidden"/>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn black-button" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
