--- a/Views/Notes/Edit.cshtml
+++ b/Views/Notes/Edit.cshtml
@@ -1,16 +1,18 @@
 @model blog.Models.Note
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Nota";
 }
 
-<h1>Edit</h1>
+<div class="flex-row space-x-3 align-center">
+ <a class="btn btn-secondary" asp-action="Index">Volver</a>
+<h1>Editar Nota</h1>
+</div>
 
-<h4>Note</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
+    <div class="flex-col h-full space-y-3">
+        <form asp-action="Edit" class="space-y-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="UserId"/>
@@ -21,18 +23,14 @@
             </div>
             <div class="form-group">
                 <label asp-for="Body" class="control-label"></label>
-                <input asp-for="Body" class="form-control" />
+                <textarea class="h-big form-control" asp-for="Body"></textarea>
                 <span asp-validation-for="Body" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn black-button" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
