take primary button from bootstrap

--- a/Views/Notes/Create.cshtml
+++ b/Views/Notes/Create.cshtml
@@ -24,7 +24,7 @@
             </div>
             <input asp-for="UserId" value="@ViewBag.UserId" type="hidden"/>
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn black-button" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
