--- a/Views/Notes/Index.cshtml
+++ b/Views/Notes/Index.cshtml
@@ -14,7 +14,7 @@
 <div class="mb-1 flex-row align-center space-x-10">
     <h1 class="mb-1">Mis Notas</h1>
 
-    <a class="black-button mt-1" asp-action="Create">Nueva Nota</a>
+    <a class="btn btn-primary mt-1" asp-action="Create">Nueva Nota</a>
 </div>
 <div class="flex-row space-x-3">
     <a class="without-dec" asp-action="Index" asp-route-sortedBy="title" asp-route-order="@order">
