--- a/Views/Notes/Edit.cshtml
+++ b/Views/Notes/Edit.cshtml
@@ -27,7 +27,7 @@
                 <span asp-validation-for="Body" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn black-button" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
