button secondary for back link in create view

--- a/Views/Notes/Create.cshtml
+++ b/Views/Notes/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Nueva Nota";
 }
 <div class="flex-row space-x-3 align-center">
-    <a asp-action="Index">Volver</a>
+    <a class="btn btn-secondary" asp-action="Index">Volver</a>
 <h1>Crear nueva nota</h1>
 </div>
 <hr />
