--- a/Views/Notes/Index.cshtml
+++ b/Views/Notes/Index.cshtml
@@ -125,15 +125,18 @@
         margin-right:0.75rem;
         -webkit-box-shadow: -1px 6px 8px -2px rgba(0,0,0,0.61); 
         box-shadow: -1px 6px 8px -2px rgba(0,0,0,0.61);
+        color: black;
     }
 
     .note-card:hover{
         background: rgba(0, 0, 0, 0.05);
-        color:blue;
         scale:1.01;
         border: 1px solid blue;
     }
 
+    .note-card:hover>div{
+        color:blue;
+    }
 
     .card-options{
         position:absolute;
