--- a/Views/Notes/Details.cshtml
+++ b/Views/Notes/Details.cshtml
@@ -4,27 +4,18 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+    <a class="btn btn-secondary w-fit mb-2" asp-action="Index">Mis Notas</a>
 
-<div>
-    <h4>Note</h4>
+    <div class="flex-row align-center">
+    <h3 class="m-0">@Html.DisplayFor(model => model.Title)</h3>
+    <a asp-action="Edit" asp-route-id="@Model.Id">
+    <img src="/icons/edit.svg" class="icon edit-icon ml-1"/>
+    </a>
+    <a asp-action="Delete" asp-route-id="@Model.Id">
+    <img src="/icons/delete.svg" class="icon delete-icon ml-0-5"/>
+    </a>
+    </div>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Body)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Body)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+    
+ @Html.DisplayFor(model => model.Body)
+     
