--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -84,8 +84,20 @@ body {
   margin-bottom: 1rem;
 }
 
+.mb-2{
+  margin-bottom: 2rem;
+}
+
 .mt-1{
   margin-top: 1rem;
+}
+
+.ml-1{
+  margin-left: 1rem;
+}
+
+.ml-0-5{
+  margin-left: 0.5rem;
 }
 
 .m-0{
@@ -98,4 +110,29 @@ body {
 
 .without-dec{
   text-decoration: none;
+}
+
+.w-fit{
+  width: fit-content;
+}
+
+.icon{
+  width: 2.5rem;
+  height:2rem;
+  animation-duration: 1000ms;
+  padding:0.2rem;
+  z-index:10;
+  border-radius:10px;
+}
+
+.icon:hover{
+  scale:1.2;
+}
+
+.edit-icon:hover{
+  background:rgba(0, 128, 0, 0.215);
+}
+
+.delete-icon:hover{
+  background:rgba(255, 0, 0, 0.215);
 }
