--- a/Views/Notes/Edit.cshtml
+++ b/Views/Notes/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="flex-row space-x-3 align-center">
- <a class="btn btn-secondary" asp-action="Index">Volver</a>
+ <a class="btn btn-secondary" asp-action="Index">Mis Notas</a>
 <h1>Editar Nota</h1>
 </div>
 
