--- a/Views/Notes/Delete.cshtml
+++ b/Views/Notes/Delete.cshtml
@@ -3,31 +3,19 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Note</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Body)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Body)
-        </dd>
-    </dl>
+<div class="space-y-3">
+<a class="btn btn-secondary" asp-action="Index">Mis Notas</a>
+<h3>¿Estás seguro que quieres eliminar esta nota?</h3>
+</div>
+ <hr />
+<div class="space-y-3">
+    <div>
+    <h4>@Model.Title</h4>
+   <p>@Model.Body</p>
+   </div>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Borrar" class="btn btn-danger" />
     </form>
 </div>
