author view finish

--- a/Views/Home/Author.cshtml
+++ b/Views/Home/Author.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Autor";
 }
-<h1>@ViewData["Title"]</h1>
-
-<p>Use this page to detail your site's privacy policy.</p>
+<h1>Autor del sitio</h1>
+<hr/>
+<p>Carlos Alejandro Arrieta Montes de Oca</p>
+<p>Correo: <a href="mailto:carlozalejandro98@gmail.com">carlozalejandro98@gmail.com</a><p>
+<p>Código fuente: <a href="https://github.com/Carlitonchin/blog">Github</a></p>
