--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -2,27 +2,24 @@
 @using blog.Areas.Identity.Data
 
 @inject SignInManager<User> SignInManager
-@inject UserManager<User> UserManager
 
-<ul class="navbar-nav">
+<ul class="navbar-nav align-center">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <p id="manage" class="nav-link text-dark" >Hola @UserManager.GetUserName(User)!</p>
-    </li>
+    
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Cerrar Sesión</button>
+            <button id="logout" type="submit" class="nav-link btn btn-danger text-white">Cerrar Sesión</button>
         </form>
     </li>
 }
 else
 {
-    <li class="nav-item">
-        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+    <li class="nav-item mr-1">
+        <a class="nav-link btn btn-primary text-white" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link btn btn-secondary text-white" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
 }
 </ul>
