--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,9 +7,9 @@
 
 <h1>@ViewData["Title"]</h1>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 w-fit">
         <section>
-            <form id="account" method="post">
+            <form id="account" method="post" class="space-y-1">
                 <h2>Acceda a BLOG con su cuenta</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
