--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -43,6 +43,12 @@ body {
   align-items: center;
 }
 
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-top: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-bottom: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
