--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -10,7 +10,7 @@
     <div class="col-md-4 w-fit">
         <section>
             <form id="account" method="post" class="space-y-1">
-                <h2>Acceda a BLOG con su cuenta</h2>
+                <h2>Acceda a BLOG.NET con su cuenta</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-floating">
