--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,14 +1,21 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using blog.Areas.Identity.Data
+
 @inject UserManager<User> UserManager
+@inject SignInManager<User> SignInManager
     
 @{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<div class="text-center" style="background:red;">
+    @if (SignInManager.IsSignedIn(User))
+    {
     <h1 class="display-4">
         Hola @UserManager.GetUserName(User)!
     </h1>
+    }else{
+        <h1>Bienvenido a BLOG.NET</h1>
+    }
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
