--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,25 +14,25 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BLOG.NET</a>
+                <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">BLOG.NET</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between mleft-1">
                     <ul class="navbar-nav flex-grow-5">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Author">Autor</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Author">Autor</a>
                         </li>
                         @if (SignInManager.IsSignedIn(User))
                         {                       
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Notes" asp-action="Index">Mis Notas</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Notes" asp-action="Index">Mis Notas</a>
                         </li>
                         }
                     </ul>
@@ -41,13 +41,15 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div id="main-div">
+        <div id="sub-main">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
+        </div>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="footer text-dark">
         <div class="container">
             &copy; 2022 - BLOG.NET
         </div>
