--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,6 +17,50 @@ body {
   margin-bottom: 60px;
 }
 
+nav{
+  height: 10vh;
+  z-index: 10;
+  background: rgba(255, 255, 255, 0.063);
+}
+
+.nav-link{
+  font:bold;
+  color: white;
+}
+
+.nav-link:hover{
+  scale: 1.1;
+}
+
+footer{
+  height: 10vh;
+  z-index: 10;
+  border-top: 1px solid gray;
+}
+
+#main-div{
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  background: url("/img/back.jpg");
+  background-position: center;
+  background-size: cover;
+ 
+}
+
+#sub-main{
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  background: rgb(255,255,255);
+  background: linear-gradient(0deg, rgba(255,255,255,0.225945480731355) 0%, rgba(0,0,0,0.8393908588826156) 46%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .flex-col{
   display: flex;
   flex-direction: column;
