--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,13 +41,11 @@
             </div>
         </nav>
     </header>
-    <div id="main-div">
-        <div id="sub-main">
+    <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
-        </div>
-    </div>
+  </div>
 
     <footer class="footer text-dark">
         <div class="container">
