--- a/Views/Notes/Index.cshtml
+++ b/Views/Notes/Index.cshtml
@@ -1,4 +1,6 @@
 @model IEnumerable<blog.Models.Note>
+    
+    <link rel="stylesheet" href="~/css/notes/index.css" asp-append-version="true" />
 
 @{
     ViewData["Title"] = "Mis Notas";
@@ -81,91 +83,3 @@
 </script>
 
 <script src="~/js/filter.js" asp-append-version="true"></script>
-
-<style>
-    .order{
-        padding: 1rem;
-        text-decoration:none;
-        border:1px solid black;
-        border-radius:10px;
-        color:black;
-    }
-
-    .order:hover{
-        background: rgba(0, 0, 0, 0.05);
-        color:blue;
-        scale:1.01;
-        border: 1px solid blue;
-    }
-
-    .order-selected{
-        color:blue;
-        border: 1px solid blue;
-    }
-
-    .arrow{
-        height:1rem;
-        width:0.5rem;
-        margin-left:0.5rem
-    }
-
-    .link-detail{
-        text-decoration:none;
-        color:black;
-        margin-top:1rem;
-    }
-    .note-card{
-        position:relative;
-        padding:3rem;
-        width: fit-content;
-        border-radius:10px;
-        border:1px solid gray;
-        cursor:pointer;
-        margin-bottom:0.75rem;
-        margin-right:0.75rem;
-        -webkit-box-shadow: -1px 6px 8px -2px rgba(0,0,0,0.61); 
-        box-shadow: -1px 6px 8px -2px rgba(0,0,0,0.61);
-        color: black;
-    }
-
-    .note-card:hover{
-        background: rgba(0, 0, 0, 0.05);
-        scale:1.01;
-        border: 1px solid blue;
-    }
-
-    .note-card:hover>div{
-        color:blue;
-    }
-
-    .card-options{
-        position:absolute;
-        top:0.5rem;
-        right:0.5rem;
-    }
-
-    .icon{
-        width: 2.5rem;
-        height:2rem;
-        animation-duration: 1000ms;
-        padding:0.2rem;
-        z-index:10;
-        border-radius:10px;
-    }
-
-    .icon:hover{
-        scale:1.2;
-    }
-
-    .edit-icon:hover{
-        background:rgba(0, 128, 0, 0.215);
-    }
-
-    .delete-icon:hover{
-        background:rgba(255, 0, 0, 0.215);
-    }
-
-    .date{
-        color:gray;
-    }
-</style>
