--- a/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
 @using blog.Areas.Identity
-@using blog.Areas.Identity.Pages
+@using blog.Areas.Identity.PagesModels.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using blog.Areas.Identity.Data
