--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using blog.Areas.Identity.Data
+@using blog.Models
 
 @inject UserManager<User> UserManager
 @inject SignInManager<User> SignInManager
