--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using blog.Areas.Identity.Data
+@using blog.Models
 @inject SignInManager<User> SignInManager
 
 <!DOCTYPE html>
