--- a/Views/User/_ViewImports.cshtml
+++ b/Views/User/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using blog.Areas.Identity
 @using blog.Areas.Identity.PagesModels.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using blog.Areas.Identity.Data
+@using blog.Models
