move razor controllers to controllers folder

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,9 +21,9 @@
         <h1>Bienvenido a BLOG.NET</h1>
         <p>Maneja tus notas con nosotros</p>
         <div class="flex-row space-x-3 align-center justify-center mtop-3">
-        <a class="nav-link btn btn-primary text-white" id="register" asp-area="Identity" asp-page="/Account/Register">Registrarse</a>
+        <a class="nav-link btn btn-primary text-white" id="register" asp-page="/Account/Register">Registrarse</a>
     
-        <a class="nav-link btn btn-secondary text-white" id="login" asp-area="Identity" asp-page="/Account/Login">Iniciar Sesión</a>
+        <a class="nav-link btn btn-secondary text-white" id="login" asp-page="/Account/Login">Iniciar Sesión</a>
         </div>
     }
     
