--- a/Views/User/_ViewImports.cshtml
+++ b/Views/User/_ViewImports.cshtml
@@ -1,5 +1,4 @@
 @using Microsoft.AspNetCore.Identity
-@using blog.Areas.Identity
-@using blog.Areas.Identity.PagesModels.Account
+@using blog.Controllers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using blog.Models
