--- a/Views/Notes/Edit.cshtml
+++ b/Views/Notes/Edit.cshtml
@@ -16,6 +16,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="UserId"/>
+            <input type="hidden" asp-for="CreationDate"/>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
